[workspace]
members = [
  "bin/host",
  "crates/executor/client",
  "crates/executor/host",
  "crates/mpt-tools",
  "crates/primitives",
  "crates/storage/rpc-db",
  "crates/host-bench",
  "crates/mpt",
  "crates/revm-crypto",
  "bin/verifier-bench",
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.3.0"
repository = "https://github.com/axiom-crypto/openvm-reth-benchmark"
homepage = "https://github.com/axiom-crypto/openvm-reth-benchmark"
edition = "2024"
exclude = ["**/target"]

[workspace.dependencies]
# Not directly used, just to have rayon feature always
hashbrown = { version = "0.15.4", features = ["rayon"] }
bincode_derive = "2.0.0"
eyre = "0.6"
tracing = { version = "0.1.40", default-features = false }
tokio = { version = "1.44.1", default-features = false, features = [
  "rt",
  "rt-multi-thread",
] }
serde_json = "1.0.110"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = "3.13.0"
futures = "0.3"
url = "2.3"
thiserror = "2.0.12"
hex-literal = "1.0.0"
rayon = "1.10.0"
bincode = { version = "2.0.1", default-features = false, features = [
  "derive",
  "alloc",
  "serde",
] }
toml = "0.9.2"
derive_more = "1.0.0"
smallvec = "1.13"
bumpalo = "3.19.0"
bytes = "1"
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
itertools = "0.14"

# workspace
openvm-rpc-db = { path = "./crates/storage/rpc-db" }
openvm-client-executor = { path = "./crates/executor/client" }
openvm-host-executor = { path = "./crates/executor/host" }
openvm-primitives = { path = "./crates/primitives" }
openvm-reth-benchmark = { path = "./crates/host-bench", default-features = false }
openvm-mpt = { path = "./crates/mpt" }
openvm-revm-crypto = { path = "./crates/revm-crypto" }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }

# revm
revm = { version = "31.0.2", features = ["serde"], default-features = false }
revm-primitives = { version = "21.0.2", features = [
    "serde",
], default-features = false }
revm-interpreter = { version = "29.0.1", default-features = false }
revm-precompile = { version = "27.0.0", default-features = false }

# alloy
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }

alloy-hardforks = "0.4.5"
alloy-eips = { version = "1.1.3", default-features = false }

alloy-consensus = { version = "1.1.3", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-provider = { version = "1.1.3", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-client = { version = "1.1.3", default-features = false, features = [
    "reqwest",
] }
alloy-rpc-types = { version = "1.1.3", default-features = false, features = [
    "eth",
] }
alloy-transport = { version = "1.1.3" }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.2", default-features = false }
openvm-cuda-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.2", default-features = false }

# Note: the openvm-sdk commit does not need to be exactly the same as the `openvm` commit used in the guest program: as long as
# the openvm-sdk commit doesn't change any guest libraries, they are compatible
# This allows us to not update revm and openvm-kzg each time we change openvm-sdk
# Using main from 10/13/2025 for now
openvm-build = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-benchmarks-prove = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-keccak256-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-keccak256-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-bigint-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-bigint-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-algebra-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-ecc-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-pairing-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-compiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false, features = [
  "bn254",
  "bls12_381",
] }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }

openvm-kzg = { git = "https://github.com/axiom-crypto/openvm-kzg.git", branch = "openvm-main", default-features = false }

openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", branch = "main" }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256", branch = "main" }

# powdr
powdr-openvm = { git = "https://github.com/powdr-labs/powdr.git", branch = "debug-reth-aot", default-features = false }
powdr-riscv-elf = { git = "https://github.com/powdr-labs/powdr.git", branch = "debug-reth-aot", default-features = false }
powdr-number = { git = "https://github.com/powdr-labs/powdr.git", branch = "debug-reth-aot", default-features = false }
powdr-autoprecompiles = { git = "https://github.com/powdr-labs/powdr.git", branch = "debug-reth-aot", default-features = false }
powdr-openvm-hints-circuit = { git = "https://github.com/powdr-labs/powdr.git", branch = "debug-reth-aot", default-features = false }

# powdr-openvm = { path = "../powdr/openvm", default-features = false }
# powdr-riscv-elf = { path = "../powdr/riscv-elf", default-features = false }
# powdr-number = { path = "../powdr/number", default-features = false }
# powdr-autoprecompiles = { path = "../powdr/autoprecompiles", default-features = false }
# powdr-openvm-hints-circuit = { path = "../powdr/openvm/extensions/hints-circuit", default-features = false }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[profile.release]
lto = "thin"

[profile.profiling]
inherits = "maxperf"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3

# Profile with debugging symbols for memory profiling
[profile.bench-with-debug]
inherits = "release"
debug = 1

# NORMAL USAGE PATCHES

# This patch should be enabled for "normal" usage.
# Comment it out if you want to use a local stark-backend instead.
# This rev needs to be the same that powdr uses.
[patch."https://github.com/openvm-org/stark-backend.git"]
openvm-cuda-backend = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "v1.2.2-powdr" }
openvm-cuda-common = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "v1.2.2-powdr" }
openvm-stark-sdk = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "v1.2.2-powdr" }

# This patch should be enabled for "normal" usage.
# Comment it out if you want to use a local OpenVM instead (patches below this block).
# This rev needs to be the same that powdr uses.
[patch."https://github.com/openvm-org/openvm.git"]
openvm-benchmarks-prove = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
# OpenVM
openvm-sdk = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
# cargo-openvm = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-mod-circuit-builder = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-poseidon2-air = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-circuit-primitives = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-circuit-primitives-derive = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-build = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-instructions = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-instructions-derive = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-macros-common = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-platform = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-circuit-derive = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-continuations = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }

# Extensions
openvm-algebra-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-algebra-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-algebra-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-algebra-moduli-macros = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-algebra-complex-macros = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-bigint-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-bigint-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-bigint-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-ecc-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-ecc-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-ecc-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-ecc-sw-macros = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-keccak256-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-keccak256-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-keccak256-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-sha256-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-sha256-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-sha256-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-native-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-native-compiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-native-compiler-derive = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-native-recursion = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-pairing-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-pairing-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-pairing-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-rv32-adapters = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-rv32im-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-rv32im-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }
openvm-rv32im-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth" }

# openvm-algebra-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth", default-features = false }
# openvm-ecc-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth", default-features = false }
openvm-keccak256 = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth", default-features = false }
openvm-pairing = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth", default-features = false, features = [
  "bn254",
  "bls12_381",
] }
openvm-sha2 = { git = "https://github.com/powdr-labs/openvm.git", branch = "debug-reth", default-features = false }

openvm-k256 = { git = "https://github.com/powdr-labs/openvm.git", package = "k256", branch = "debug-reth" }
openvm-p256 = { git = "https://github.com/powdr-labs/openvm.git", package = "p256", branch = "debug-reth" }

# Uncomment to use a local version of stark-backend.
# [patch."https://github.com/openvm-org/stark-backend.git"]
# openvm-stark-backend = { path = "../stark-backend/crates/stark-backend" }
# openvm-stark-sdk = { path = "../stark-backend/crates/stark-sdk" }

# Uncomment to use a local version of stark-backend.
# [patch."https://github.com/powdr-labs/stark-backend.git"]
# openvm-stark-backend = { path = "../stark-backend/crates/stark-backend" }
# openvm-stark-sdk = { path = "../stark-backend/crates/stark-sdk" }

# Uncomment the 2 patches below to use a local OpenVM repo.

# Uncomment to use a local version of OpenVM.
# [patch."https://github.com/openvm-org/openvm.git"]
# openvm-benchmarks-prove = { path = "../openvm/benchmarks/prove" }
# # OpenVM
# openvm-sdk = { path = "../openvm/crates/sdk" }
# cargo-openvm = { path = "../openvm/crates/cli" }
# openvm-mod-circuit-builder = { path = "../openvm/crates/circuits/mod-builder/" }
# openvm-poseidon2-air = { path = "../openvm/crates/circuits/poseidon2-air" }
# openvm-circuit-primitives = { path = "../openvm/crates/circuits/primitives" }
# openvm-circuit-primitives-derive = { path = "../openvm/crates/circuits/primitives/derive" }
# openvm = { path = "../openvm/crates/toolchain/openvm" }
# openvm-build = { path = "../openvm/crates/toolchain/build" }
# openvm-instructions = { path = "../openvm/crates/toolchain/instructions" }
# openvm-instructions-derive = { path = "../openvm/crates/toolchain/instructions/derive" }
# openvm-macros-common = { path = "../openvm/crates/toolchain/macros" }
# openvm-platform = { path = "../openvm/crates/toolchain/platform" }
# openvm-transpiler = { path = "../openvm/crates/toolchain/transpiler" }
# openvm-circuit = { path = "../openvm/crates/vm" }
# openvm-circuit-derive = { path = "../openvm/crates/vm/derive" }
# openvm-continuations = { path = "../openvm/crates/continuations" }

# # Extensions
# openvm-algebra-circuit = { path = "../openvm/extensions/algebra/circuit" }
# openvm-algebra-transpiler = { path = "../openvm/extensions/algebra/transpiler" }
# openvm-algebra-guest = { path = "../openvm/extensions/algebra/guest" }
# openvm-algebra-moduli-macros = { path = "../openvm/extensions/algebra/moduli-macros/" }
# openvm-algebra-complex-macros = { path = "../openvm/extensions/algebra/complex-macros/" }
# openvm-bigint-circuit = { path = "../openvm/extensions/bigint/circuit" }
# openvm-bigint-transpiler = { path = "../openvm/extensions/bigint/transpiler" }
# openvm-bigint-guest = { path = "../openvm/extensions/bigint/guest" }
# openvm-ecc-circuit = { path = "../openvm/extensions/ecc/circuit" }
# openvm-ecc-transpiler = { path = "../openvm/extensions/ecc/transpiler/" }
# openvm-ecc-guest = { path = "../openvm/extensions/ecc/guest/" }
# openvm-ecc-sw-macros = { path = "../openvm/extensions/ecc/sw-macros/" }
# openvm-keccak256-circuit = { path = "../openvm/extensions/keccak256/circuit" }
# openvm-keccak256-transpiler = { path = "../openvm/extensions/keccak256/transpiler" }
# openvm-keccak256-guest = { path = "../openvm/extensions/keccak256/guest" }
# openvm-sha256-circuit = { path = "../openvm/extensions/sha256/circuit" }
# openvm-sha256-transpiler = { path = "../openvm/extensions/sha256/transpiler" }
# openvm-sha256-guest = { path = "../openvm/extensions/sha256/guest" }
# openvm-native-circuit = { path = "../openvm/extensions/native/circuit" }
# openvm-native-compiler = { path = "../openvm/extensions/native/compiler" }
# openvm-native-compiler-derive = { path = "../openvm/extensions/native/compiler/derive" }
# openvm-native-recursion = { path = "../openvm/extensions/native/recursion" }
# openvm-pairing-circuit = { path = "../openvm/extensions/pairing/circuit" }
# openvm-pairing-transpiler = { path = "../openvm/extensions/pairing/transpiler" }
# openvm-pairing-guest = { path = "../openvm/extensions/pairing/guest" }
# openvm-rv32-adapters = { path = "../openvm/extensions/rv32-adapters/" }
# openvm-rv32im-circuit = { path = "../openvm/extensions/rv32im/circuit/" }
# openvm-rv32im-transpiler = { path = "../openvm/extensions/rv32im/transpiler" }
# openvm-rv32im-guest = { path = "../openvm/extensions/rv32im/guest" }

# Uncomment to use a local version of OpenVM.
# This is necessary because only patches from the root crate (not Powdr dependency is used)
# [patch."https://github.com/powdr-labs/openvm.git"]
# openvm = { path = "../openvm/crates/toolchain/openvm" }
# openvm-build = { path = "../openvm/crates/toolchain/build" }
# openvm-rv32im-circuit = { path = "../openvm/extensions/rv32im/circuit/" }
# openvm-rv32im-transpiler = { path = "../openvm/extensions/rv32im/transpiler" }
# openvm-rv32im-guest = { path = "../openvm/extensions/rv32im/guest" }
# openvm-transpiler = { path = "../openvm/crates/toolchain/transpiler" }
# openvm-circuit = { path = "../openvm/crates/vm" }
# openvm-circuit-derive = { path = "../openvm/crates/vm/derive" }
# openvm-circuit-primitives = { path = "../openvm/crates/circuits/primitives" }
# openvm-circuit-primitives-derive = { path = "../openvm/crates/circuits/primitives/derive" }
# openvm-instructions = { path = "../openvm/crates/toolchain/instructions" }
# openvm-instructions-derive = { path = "../openvm/crates/toolchain/instructions/derive" }
# openvm-sdk = { path = "../openvm/crates/sdk" }
# openvm-ecc-circuit = { path = "../openvm/extensions/ecc/circuit" }
# openvm-ecc-transpiler = { path = "../openvm/extensions/ecc/transpiler" }
# openvm-keccak256-circuit = { path = "../openvm/extensions/keccak256/circuit" }
# openvm-keccak256-transpiler = { path = "../openvm/extensions/keccak256/transpiler" }
# openvm-sha256-circuit = { path = "../openvm/extensions/sha256/circuit" }
# openvm-sha256-transpiler = { path = "../openvm/extensions/sha256/transpiler" }
# openvm-algebra-circuit = { path = "../openvm/extensions/algebra/circuit" }
# openvm-algebra-transpiler = { path = "../openvm/extensions/algebra/transpiler" }
# openvm-bigint-circuit = { path = "../openvm/extensions/bigint/circuit" }
# openvm-bigint-transpiler = { path = "../openvm/extensions/bigint/transpiler" }
# openvm-pairing-circuit = { path = "../openvm/extensions/pairing/circuit" }
# openvm-pairing-transpiler = { path = "../openvm/extensions/pairing/transpiler" }
# openvm-native-circuit = { path = "../openvm/extensions/native/circuit" }
# openvm-native-recursion = { path = "../openvm/extensions/native/recursion" }
# openvm-platform = { path = "../openvm/crates/toolchain/platform" }
# openvm-custom-insn = { path = "../openvm/crates/toolchain/custom_insn" }
