[package]
version = "0.1.0"
name = "openvm-reth-benchmark"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
eyre.workspace = true
url.workspace = true
tracing-subscriber = "0.3.18"
tracing.workspace = true
dotenv = "0.15.0"
clap = { version = "4.5.7", features = ["derive", "env"] }
serde.workspace = true
bincode = { workspace = true, features = ["std"] }
bitcode.workspace = true
metrics = "0.23.0"
hex = "0.4.3"
serde_json.workspace = true

# workspace
openvm-host-executor.workspace = true
openvm-client-executor.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-transport.workspace = true

# reth
reth-primitives.workspace = true

# openvm
openvm = { workspace = true }
openvm-build = { workspace = true }
openvm-transpiler = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-algebra-circuit = { workspace = true }
openvm-bigint-circuit = { workspace = true }
openvm-ecc-circuit = { workspace = true }
openvm-pairing-circuit = { workspace = true }
openvm-circuit = { workspace = true }
openvm-stark-sdk = { workspace = true }
sdk-v2 = { workspace = true }
openvm-sdk-config = { workspace = true }
openvm-cuda-backend = { workspace = true, optional = true }
derive_more.workspace = true
toml.workspace = true
tokio.workspace = true

# halo2
halo2-axiom = { version = "0.5.0", default-features = false, optional = true }

# powdr
powdr-openvm = { workspace = true }
powdr-openvm-riscv = { workspace = true }
powdr-riscv-elf = { workspace = true }
powdr-number = { workspace = true }
powdr-autoprecompiles = { workspace = true }
powdr-openvm-riscv-hints-circuit = { workspace = true }

[features]
default = ["mimalloc", "metrics"]
parallel = ["sdk-v2/parallel"]
metrics = ["sdk-v2/metrics", "powdr-openvm-riscv/metrics"]
tco = ["sdk-v2/tco", "powdr-openvm-riscv/tco"]
aot = ["sdk-v2/aot", "powdr-openvm-riscv/aot"]
evm-prove = ["halo2-axiom"]
evm-verify = ["evm-prove", "halo2-axiom"]
perf-metrics = ["sdk-v2/perf-metrics"]
mimalloc = ["sdk-v2/mimalloc"]
jemalloc = ["sdk-v2/jemalloc"]
nightly-features = []
# x86 only:
halo2-asm = ["halo2-axiom?/asm"]
cuda = [
    "powdr-openvm-riscv/cuda",
    "sdk-v2/cuda",
    "dep:openvm-cuda-backend",
]
unprotected = ["sdk-v2/unprotected"]
