[package]
name = "openvm-mpt"
description = ""
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
rlp.workspace = true
serde.workspace = true
thiserror.workspace = true
bincode.workspace = true
smallvec = "1.13"
bumpalo = "3.18.1"

# reth
reth-trie.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-rlp.workspace = true

# not directly used, for rayon feature
hashbrown.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[features]
build_mpt = []
default = []
