[package]
name = "openvm-revm-crypto"
description = "OpenVM REVM and Alloy Crypto Provider Library"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-primitives = { workspace = true, features = ["map-foldhash"] }
alloy-consensus = { workspace = true, features = ["crypto-backend"] }

# OpenVM dependencies for optimized crypto (only needed when running in zkvm)
openvm-ecc-guest = { workspace = true }
openvm-sha2 = { workspace = true }
openvm-pairing = { workspace = true, features = ["bn254"] }
openvm-k256 = { workspace = true }
openvm-p256 = { workspace = true }
openvm-kzg = { workspace = true }
openvm = { workspace = true, features = ["std"] }
openvm-algebra-guest = { workspace = true }
openvm-keccak256 = { workspace = true }

revm-precompile = { workspace = true }

[target.'cfg(target_os = "zkvm")'.dependencies]
revm-primitives = { workspace = true, features = ["hashbrown"] }
alloy-primitives = { workspace = true, features = ["native-keccak"] }
