[package]
name = "openvm-client-executor"
description = ""
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
bincode.workspace = true
rustc-hash.workspace = true
hashbrown = { version = "0.14", features = ["rayon"] }

# workspace
openvm-witness-db.workspace = true
openvm-primitives.workspace = true
openvm-mpt.workspace = true

# reth
reth-ethereum-consensus.workspace = true
reth-optimism-consensus.workspace = true
reth-execution-types.workspace = true
reth-primitives.workspace = true
reth-storage-errors.workspace = true
reth-trie.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-evm-optimism.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true
reth-optimism-chainspec.workspace = true
reth-revm.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
itertools = "0.13.0"
url.workspace = true
futures.workspace = true

[target.'cfg(target_os = "zkvm")'.dependencies]
revm-primitives = { workspace = true, features = ["hashbrown"] }
alloy-primitives = { workspace = true, features = ["native-keccak"] }
# revm must have feature `kzg-rs` or `openvm-kzg` enabled. Due to patching we cannot enable `openvm-kzg` here.

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
revm = { workspace = true, features = ["c-kzg"] }

[dev-dependencies]

[features]
