[package]
name = "openvm-host-executor"
description = ""
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true

# workspace
openvm-rpc-db.workspace = true
openvm-client-executor.workspace = true
openvm-mpt = { workspace = true, features = ["build_mpt"] }
openvm-primitives.workspace = true
mptnew.workspace = true

# reth
reth-primitives = { workspace = true, features = ["secp256k1"] }
reth-primitives-traits.workspace = true
reth-execution-types.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-ethereum-consensus.workspace = true
reth-consensus.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
bincode = { workspace = true, features = ["serde", "std"] }

[dev-dependencies]
dotenv = "0.15.0"
alloy-primitives.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
