[package]
name = "openvm-witness-db"
description = ""
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

# workspace
openvm-primitives.workspace = true

# reth
reth-primitives.workspace = true
reth-storage-errors.workspace = true

# revm
revm-primitives.workspace = true
